Bug 1322103 - For editing a draft set nsIMsgCompose.originalMsgURI from draft and not DB property. r=mkmelin a=jorgk